# binary_greedy_mesher_demo

./: Cargo.toml
benches/: chunks_refs.rs  meshing.rs
src/: chunk.rs  chunks_refs.rs  culled_mesher.rs  culled_mesher_optimized.rs  greedy_mesher.rs  greedy_mesher_optimized.rs  main.rs  rendering.rs  scanner.rs  voxel_engine.rs
