[package]
name = "new_voxel_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14"
bevy-inspector-egui = "0.25"
bevy_atmosphere = "0.10"
bevy_flycam = "0.14"
bevy_math = "0.14"
bevy_screen_diagnostics = "0.6"
bracket-noise = "0.8"
futures-lite = "2"
rand = "0.8"
rand_chacha = "0.3"
tinyvec = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# [[bench]]
# name = "chunk"
# harness = false

[[bench]]
name = "meshing"
harness = false

# [[bench]]
# name = "chunks_refs"
# harness = false
